# fleet-adapter-tutorial

./: .gitignore  .gitmodules  README.md
bridge_tools/: bridge.yaml  install_bridge.sh  run_bridge.sh
maps/maze/: maze.yaml  maze_nav_0.yaml
ros1/src/mir_fleet_manager/launch/: fleet_manager.launch
ros1/src/mir_minimal_example/mir_fleet_manager/src/fleet_manager/: fleet_manager.py
ros1/src/mir_minimal_example/mir_vendor_setup/launch/: main.launch
ros2/src/mir_minimal_example/mir_rmf_fleet_adapter/: CMakeLists.txt
ros2/src/mir_minimal_example/mir_rmf_fleet_adapter/include/mir_rmf_fleet_adapter/: FleetAdapterNode.hpp  ParseGraph.hpp
ros2/src/mir_minimal_example/mir_rmf_fleet_adapter/src/: FleetAdapterNode.cpp  start_fleet_adapter.cpp
ros2/src/mir_rmf_fleet_adapter/: CMakeLists.txt  package.xml
ros2/src/mir_rmf_fleet_adapter/include/mir_rmf_fleet_adapter/: FleetAdapterNode.hpp  ParseGraph.hpp
ros2/src/mir_rmf_fleet_adapter/msg/: MiRTaskRequest.msg
ros2/src/mir_rmf_fleet_adapter/src/: FleetAdapterNode.cpp  ParseGraph.cpp  start_fleet_adapter.cpp
ros2/src/simple_move_fleet_py/: move_fleet.py  package.xml  setup.cfg  setup.py
tools/: README.md  build_ros1_workspace.sh  build_soss.sh  build_traffic_editor.sh  generate_nav_map.sh  rmf_mir_fleet_adapter.sh  rmf_schedule.sh  ros_monitor.sh  soss.sh
tools/build_scripts/: build_all.sh  build_ros1_workspace.sh  build_ros2_workspace.sh  build_traffic_editor.sh
tools/traffic-editor/: traffic_editor.sh
tools/tutorial/: 01-launch_minimal_mir.sh  02-launch-minimal-mir-with-fleet-manager.sh  03-launch-minimal-mir-with-fleet-manager-and-bridge.sh  04-launch-minimal-mir-full.sh
